--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "fathom-client": "^3.7.2",
+    "flowbite": "^3.1.2",
+    "flowbite-react": "^0.10.2",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "react": "^19.0.0",
